--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="2.2.2" />
+  </ItemGroup>
+
 </Project>
