--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="2.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
