--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Remove="Migrations\20190303140034_Initial.cs" />
     <Compile Remove="Migrations\20190305133245_Tags.cs" />
+    <Compile Remove="Migrations\20190305133923_Tags.cs" />
   </ItemGroup>
 
   <ItemGroup>
